<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblChooseTutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/radio_choose_tutor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tutorChoiceRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChooseTutor">

        <RadioButton
            android:id="@+id/radioBtnSameTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_same_tutor"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioBtnDifferentTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_different_tutor" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblChooseContractTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/radio_choose_contract_terms"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <RadioGroup
        android:id="@+id/contractTermRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChooseContractTerm">

        <RadioButton
            android:id="@+id/radioBtnReuseContractTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_reuse_contract_terms" />

        <RadioButton
            android:id="@+id/radioBtnModifyContractTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_modify_contract_terms" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <Button
        android:id="@+id/btnContractRenewalProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contract_renewal_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>